(NOT-TESTED) Evaluation Change Correction

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_74509/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_95730/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.model.load_state_dict(torch.load(model_path))\n"
      ]
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,19 +477,15 @@
     "    if player_color.lower() == \"black\":\n",
     "        eval_change = -eval_change\n",
     "        \n",
-    "    # Convert to pawn units (divide by 100 since we're in centipawns)\n",
-    "    eval_change = eval_change / 100\n",
-    "    \n",
-    "    # Standard threshold values in pawn units\n",
-    "    if eval_change <= -3.0:  # Loss of 3 pawns or more\n",
+    "    # Now we're already in centipawns, no need to divide by 100\n",
+    "    if eval_change <= -300:  \n",
     "        return \"Blunder\"\n",
-    "    elif eval_change <= -1.5:  # Loss of 1.5 pawns\n",
+    "    elif eval_change <= -150:\n",
     "        return \"Mistake\"\n",
-    "    elif eval_change <= -0.5:  # Loss of 0.5 pawns\n",
+    "    elif eval_change <= -50:\n",
     "        return \"Inaccuracy\"\n",
     "    else:\n",
     "        return \"Normal\"\n",
-    "\n",
     "\n",
     "def calculate_material(board):\n",
     "    # Returns material balance for both sides\n",
@@ -691,20 +687,33 @@
     "        return None\n",
     "        \n",
     "    def process_eval(eval_str):\n",
+    "        MAX_PAWNS = 15  # Cap at ±15 pawns\n",
+    "        \n",
     "        if isinstance(eval_str, str) and '#' in eval_str:\n",
     "            mate_num = int(eval_str.replace('#', ''))\n",
-    "            return 2000 if mate_num > 0 else -2000\n",
-    "        return float(eval_str)\n",
+    "            # Convert mate scores to pawns (not centipawns)\n",
+    "            return MAX_PAWNS if mate_num > 0 else -MAX_PAWNS\n",
+    "            \n",
+    "        try:\n",
+    "            # Keep everything in pawns and cap\n",
+    "            val = float(eval_str)\n",
+    "            return max(min(val, MAX_PAWNS), -MAX_PAWNS)\n",
+    "        except ValueError:\n",
+    "            return None\n",
     "    \n",
     "    try:\n",
     "        prev_val = process_eval(prev_evaluation)\n",
     "        curr_val = process_eval(evaluation)\n",
-    "        change = curr_val - prev_val\n",
     "        \n",
+    "        if prev_val is None or curr_val is None:\n",
+    "            return None\n",
+    "            \n",
+    "        # Calculate change (still in pawns)\n",
+    "        change = curr_val - prev_val\n",
     "        if player.lower() == \"black\":\n",
     "            change = -change\n",
     "            \n",
-    "        return change * 100  # Convert from pawns to centipawns\n",
+    "        return change\n",
     "        \n",
     "    except (ValueError, TypeError) as e:\n",
     "        logging.error(f\"Error calculating eval change: {str(e)}\")\n",
@@ -713,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,9 +1135,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    1.343120e+05\n",
+      "mean    -4.651617e+05\n",
+      "std      3.187952e+06\n",
+      "min     -4.000000e+07\n",
+      "25%     -8.700000e+03\n",
+      "50%     -1.900000e+03\n",
+      "75%      0.000000e+00\n",
+      "max      1.993540e+07\n",
+      "Name: eval_change, dtype: float64\n",
+      "count     136504.0\n",
+      "unique      4954.0\n",
+      "top            0.0\n",
+      "freq        5657.0\n",
+      "Name: evaluation, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adhd_moves_df['eval_change'].describe())\n",
+    "print(adhd_moves_df['evaluation'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Fetching games for user 'teoeo'...\n",
+      "INFO: Fetched 1252 games with evaluations for user 'teoeo'.\n",
+      "INFO: Fetching games for user 'Tobermorey'...\n",
+      "INFO: Fetched 190 games with evaluations for user 'Tobermorey'.\n",
+      "INFO: Fetching games for user 'apostatlet'...\n",
+      "INFO: Fetched 424 games with evaluations for user 'apostatlet'.\n",
+      "INFO: Fetching games for user 'LovePump1000'...\n",
+      "INFO: Fetched 583 games with evaluations for user 'LovePump1000'.\n",
+      "INFO: Fetching games for user 'StuntmanAndy'...\n",
+      "INFO: Fetched 825 games with evaluations for user 'StuntmanAndy'.\n",
+      "INFO: Fetching games for user 'Banfy_B'...\n",
+      "WARNING: Failed to fetch games for user 'Banfy_B'. Status code: 404\n",
+      "INFO: Fetching games for user 'ChessyChesterton12'...\n",
+      "INFO: Fetched 265 games with evaluations for user 'ChessyChesterton12'.\n",
+      "INFO: Fetching games for user 'yastoon'...\n",
+      "INFO: Fetched 24 games with evaluations for user 'yastoon'.\n",
+      "INFO: Fetching games for user 'Timy1976'...\n",
+      "WARNING: Failed to fetch games for user 'Timy1976'. Status code: 404\n",
+      "INFO: Fetching games for user 'SonnyDayz11'...\n",
+      "INFO: Fetched 16 games with evaluations for user 'SonnyDayz11'.\n",
+      "INFO: Fetching games for user 'Xiroir'...\n",
+      "INFO: Fetched 104 games with evaluations for user 'Xiroir'.\n",
+      "INFO: Fetching games for user 'StellaAthena'...\n",
+      "INFO: Fetched 162 games with evaluations for user 'StellaAthena'.\n",
+      "INFO: Fetching games for user 'MagikPigeon'...\n",
+      "INFO: Fetched 98 games with evaluations for user 'MagikPigeon'.\n",
+      "INFO: Initialized Stockfish engine at '/opt/homebrew/bin/stockfish'.\n",
+      "INFO: Processing ADHD players' games...\n",
+      "INFO: \n",
+      "Processing 3943 games for ADHD group\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing ADHD games: 100%|██████████| 3943/3943 [05:32<00:00, 11.87it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: \n",
+      "Processing Summary for ADHD:\n",
+      "INFO: Total games: 3943\n",
+      "INFO: Standard chess games: 3684\n",
+      "INFO: Rated games: 2192\n",
+      "INFO: Games with evaluations: 2192\n",
+      "INFO: Total moves processed: 136504\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging ADHD GAMES PROCESSING\n",
+      "INFO: Fetching general population games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Collecting games: 100%|██████████| 10000/10000 [03:45<00:00, 44.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: \n",
+      "ELO Distribution:\n",
+      "INFO: ELO 800-850: 3 games\n",
+      "INFO: ELO 850-900: 4 games\n",
+      "INFO: ELO 900-950: 21 games\n",
+      "INFO: ELO 950-1000: 34 games\n",
+      "INFO: ELO 1000-1050: 68 games\n",
+      "INFO: ELO 1050-1100: 98 games\n",
+      "INFO: ELO 1100-1150: 143 games\n",
+      "INFO: ELO 1150-1200: 194 games\n",
+      "INFO: ELO 1200-1250: 249 games\n",
+      "INFO: ELO 1250-1300: 300 games\n",
+      "INFO: ELO 1300-1350: 363 games\n",
+      "INFO: ELO 1350-1400: 491 games\n",
+      "INFO: ELO 1400-1450: 559 games\n",
+      "INFO: ELO 1450-1500: 655 games\n",
+      "INFO: ELO 1500-1550: 668 games\n",
+      "INFO: ELO 1550-1600: 690 games\n",
+      "INFO: ELO 1600-1650: 684 games\n",
+      "INFO: ELO 1650-1700: 732 games\n",
+      "INFO: ELO 1700-1750: 679 games\n",
+      "INFO: ELO 1750-1800: 624 games\n",
+      "INFO: ELO 1800-1850: 563 games\n",
+      "INFO: ELO 1850-1900: 507 games\n",
+      "INFO: ELO 1900-1950: 435 games\n",
+      "INFO: ELO 1950-2000: 355 games\n",
+      "INFO: ELO 2000-2050: 266 games\n",
+      "INFO: ELO 2050-2100: 193 games\n",
+      "INFO: ELO 2100-2150: 146 games\n",
+      "INFO: ELO 2150-2200: 101 games\n",
+      "INFO: ELO 2200-2250: 74 games\n",
+      "INFO: ELO 2250-2300: 34 games\n",
+      "INFO: ELO 2300-2350: 19 games\n",
+      "INFO: ELO 2350-2400: 12 games\n",
+      "INFO: ELO 2400-2450: 16 games\n",
+      "INFO: ELO 2450-2500: 8 games\n",
+      "INFO: ELO 2500-2550: 6 games\n",
+      "INFO: ELO 2550-2600: 4 games\n",
+      "INFO: ELO 2600-2650: 1 games\n",
+      "INFO: ELO 2650-2700: 1 games\n",
+      "INFO: Successfully collected 10000 games\n",
+      "INFO: Processing general population games...\n",
+      "INFO: \n",
+      "Processing 10000 games for General group\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing General games: 100%|██████████| 10000/10000 [24:51<00:00,  6.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: \n",
+      "Processing Summary for General:\n",
+      "INFO: Total games: 10000\n",
+      "INFO: Standard chess games: 10000\n",
+      "INFO: Rated games: 10000\n",
+      "INFO: Games with evaluations: 10000\n",
+      "INFO: Total moves processed: 635243\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging GENERAL GAMES PROCESSING\n",
+      "INFO: Combining datasets...\n",
+      "INFO: Debugging COMBINED DATASET\n",
+      "INFO: Cleaning data...\n",
+      "INFO: Total number of moves after cleaning: 354666\n"
+     ]
+    }
+   ],
    "source": [
     "# ----------------------- 1. Fetch and Process ADHD Players' Games -----------------------\n",
     "\n",
@@ -1212,9 +1420,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluation Change Statistics:\n",
+      "count    3.546660e+05\n",
+      "mean    -1.564998e+05\n",
+      "std      1.767131e+06\n",
+      "min     -2.051770e+07\n",
+      "25%     -7.800000e+03\n",
+      "50%     -2.100000e+03\n",
+      "75%     -4.000000e+02\n",
+      "max      1.993540e+07\n",
+      "Name: eval_change, dtype: float64\n",
+      "\n",
+      "Error Category Distribution:\n",
+      "error_category\n",
+      "Normal        51.0\n",
+      "Blunder       45.4\n",
+      "Mistake        2.0\n",
+      "Inaccuracy     1.6\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Largest Evaluation Changes:\n",
+      "        eval_change error_category  san\n",
+      "110615   19935400.0        Blunder  Kg8\n",
+      "13545    19922600.0        Blunder  Rf7\n",
+      "41429    19901100.0         Normal  Ke2\n",
+      "31089    19900900.0         Normal  Re8\n",
+      "16294    19899900.0        Blunder   g5\n",
+      "\n",
+      "Smallest Evaluation Changes:\n",
+      "        eval_change error_category   san\n",
+      "526274  -20517700.0         Normal   Qf5\n",
+      "731683  -20514000.0         Normal  Qf2+\n",
+      "588414  -20245600.0         Normal  Qxc7\n",
+      "509972  -20208100.0         Normal  Qc4+\n",
+      "769244  -20205500.0         Normal  Qxd3\n"
+     ]
+    }
+   ],
    "source": [
     "def analyze_error_distribution(df):\n",
     "    # Print actual value ranges\n",
