--- a/Main.ipynb
+++ b/Main.ipynb
@@ -229,9 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Enum' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 51\u001b[0m\n\u001b[1;32m     47\u001b[0m     relative_pressure \u001b[38;5;241m=\u001b[39m time_remaining \u001b[38;5;241m<\u001b[39m (\u001b[38;5;241m0.1\u001b[39m \u001b[38;5;241m*\u001b[39m initial_time)  \u001b[38;5;66;03m# Less than 10% of initial time\u001b[39;00m\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m absolute_pressure \u001b[38;5;129;01mor\u001b[39;00m relative_pressure\n\u001b[0;32m---> 51\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTimeControlType\u001b[39;00m(\u001b[43mEnum\u001b[49m):\n\u001b[1;32m     52\u001b[0m     CLASSICAL \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassical\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     53\u001b[0m     RAPID \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRapid\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Enum' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def safe_int(value, default=None):\n",
     "    try:\n",
@@ -338,15 +350,13 @@
     "    return material\n",
     "\n",
     "def categorize_position_complexity(evaluation):\n",
-    "    \"\"\"\n",
-    "    Categorize position complexity, handling both numeric and mate evaluations\n",
-    "    \"\"\"\n",
+    "#position needs to handle both text and numeric evaluations because of \"mate scores\" \n",
     "    if evaluation is None:\n",
     "        return 'Unknown'\n",
     "    \n",
     "    # Handle mate scores\n",
     "    if isinstance(evaluation, str) and '#' in evaluation:\n",
-    "        return 'Decisive Advantage'  # Mate is always decisive\n",
+    "        return 'Decisive Advantage'\n",
     "        \n",
     "    try:\n",
     "        eval_float = float(evaluation)\n",
@@ -360,9 +370,6 @@
     "        return 'Unknown'\n",
     "\n",
     "def categorize_move(eval_before, eval_after):\n",
-    "    \"\"\"\n",
-    "    Categorize move quality, handling both numeric and mate evaluations\n",
-    "    \"\"\"\n",
     "    if eval_before is None or eval_after is None:\n",
     "        return \"Unknown\"\n",
     "\n",
@@ -378,16 +385,16 @@
     "    except (ValueError, TypeError):\n",
     "        return \"Unknown\"\n",
     "\n",
-    "    # Now proceed with numeric evaluation\n",
+    "    ##numeric evaluation\n",
     "    SATURATION_LIMIT = 1000  # Equivalent to a 10-pawn advantage\n",
     "    \n",
-    "    # Calculate evaluation change\n",
+    "    ##eval change\n",
     "    eval_change = eval_after - eval_before\n",
     "\n",
     "    if abs(eval_after) >= SATURATION_LIMIT:\n",
     "        return \"Winning Position\" if eval_after > 0 else \"Losing Position\"\n",
     "\n",
-    "    # Categorize the move based on evaluation change\n",
+    "    ##mistake calculator\n",
     "    if eval_change <= -300:\n",
     "        return \"Blunder\"\n",
     "    elif eval_change <= -150:\n",
@@ -403,10 +410,6 @@
     "    else:\n",
     "        return \"Normal\"\n",
     "\n",
-    "def debug_data_pipeline(df, label):\n",
-    "    # Function definition here\n",
-    "    logging.info(f\"Debugging {label}\")\n",
-    "    # Process the DataFrame or print logs for debugging\n",
     "\n",
     "def raw_winning_chances(cp):\n",
     "    MULTIPLIER = -0.00368208\n",
@@ -507,10 +510,10 @@
     "def categorize_game_phase(board):\n",
     "    \"\"\"\n",
     "    Enhanced game phase calculation incorporating:\n",
-    "    - Material balance and distribution\n",
-    "    - Piece mobility\n",
-    "    - Pawn structure\n",
-    "    - Position characteristics\n",
+    "    material balance \n",
+    "    Piecemobility\n",
+    "    pawn structure\n",
+    "    position\n",
     "    \"\"\"\n",
     "    # Material values calibrated from empirical analysis\n",
     "    PIECE_VALUES = {\n",
@@ -550,7 +553,7 @@
     "                \n",
     "        return center_pawns * 0.1 + passed_pawns * 0.15\n",
     "    \n",
-    "    # Calculate non-pawn material and mobility\n",
+    "    # non-pawn material\n",
     "    def evaluate_position(color):\n",
     "        material = 0\n",
     "        mobility_factor = 0\n",
@@ -560,13 +563,13 @@
     "            count = len(pieces)\n",
     "            material += count * value\n",
     "            \n",
-    "            # Add mobility consideration\n",
+    "            #mobility consideration\n",
     "            for square in pieces:\n",
     "                mobility_factor += calculate_piece_mobility(board, piece_type, square) * 0.01\n",
     "                \n",
     "        return material, mobility_factor\n",
     "    \n",
-    "    # Calculate for both sides\n",
+    "    # Calculate both sides\n",
     "    w_material, w_mobility = evaluate_position(chess.WHITE)\n",
     "    b_material, b_mobility = evaluate_position(chess.BLACK)\n",
     "    \n",
@@ -603,9 +606,9 @@
     "    if eval_before is None or eval_after is None:\n",
     "        return \"Unknown\"\n",
     "\n",
-    "    # Define saturation limits in centipawns\n",
-    "    SATURATION_LIMIT = 1000  # Equivalent to a 10-pawn advantage\n",
-    "    MATE_SCORE = 10000       # Arbitrary large value representing mate\n",
+    "    #saturation limits in centipawns to a 10pawn advantage\n",
+    "    SATURATION_LIMIT = 1000  \n",
+    "    MATE_SCORE = 10000 \n",
     "\n",
     "    # Calculate evaluation change\n",
     "    eval_change = eval_after - eval_before\n",
@@ -639,12 +642,6 @@
     "        return \"Good Move\"\n",
     "    else:\n",
     "        return \"Normal\"\n",
-    "\n",
-    "\n",
-    "def debug_data_pipeline(df, label):\n",
-    "    # Function definition here\n",
-    "    logging.info(f\"Debugging {label}\")\n",
-    "    # Process the DataFrame or print logs for debugging\n",
     "\n",
     "\n",
     "def raw_winning_chances(cp):\n",
@@ -1512,7 +1509,6 @@
     "        \n",
     "        logging.info(\"Processing ADHD players' games...\")\n",
     "        adhd_moves_df = process_games(adhd_games, group_label='ADHD', engine=engine)\n",
-    "        debug_data_pipeline(adhd_moves_df, \"ADHD GAMES PROCESSING\")\n",
     "        \n",
     "        # ----------------------- 3. Fetch and Process General Population Games -----------------------\n",
     "        \n",
@@ -1529,13 +1525,11 @@
     "        else:\n",
     "            logging.info(\"Processing general population games...\")\n",
     "            general_moves_df = process_games(general_games, group_label='General', engine=engine)\n",
-    "            debug_data_pipeline(general_moves_df, \"GENERAL GAMES PROCESSING\")\n",
     "        \n",
     "        # ----------------------- 4. Combine Datasets -----------------------\n",
     "\n",
     "        logging.info(\"Combining datasets...\")\n",
     "        all_moves_df = pd.concat([adhd_moves_df, general_moves_df], ignore_index=True)\n",
-    "        debug_data_pipeline(all_moves_df, \"COMBINED DATASET\")\n",
     "\n",
     "# ----------------------- 5. Data Cleaning -----------------------\n",
     "\n",
